--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "basename": "/",
   "dependencies": {
     "@material-ui/core": "^4.9.9",
+    "@tinymce/tinymce-react": "^3.6.0",
     "autoprefixer": "7.1.6",
     "axios": "^0.19.2",
     "babel-core": "6.26.0",
