--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "tinymce": "^5.2.2",
     "url-loader": "0.6.2",
     "validator": "^12.2.0",
     "webpack": "3.8.1",
