--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-fontawesome": "^1.7.1",
     "react-html-email": "^3.0.0",
     "react-id-swiper": "^1.6.8",
+    "react-js-pagination": "^3.0.3",
     "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^4.3.1",
